--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head>
     <title>Area 51 Simulator™<title>
-      <iframe src="https://scratch.mit.edu/projects/335035542/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe src="https://scratch.mit.edu/projects/335035542/embed" allowtransparency="false" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       </head>
       </html>
