--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Area 51 Simulator™<title>
       </head>
       <body>
-      <iframe src="https://scratch.mit.edu/projects/335035542/embed" allowtransparency="false" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe src="https://scratch.mit.edu/projects/335035542/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       </body>
       </html>
